--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.date-format=yyyy-MM-dd
