--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=123456
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=yyyy-MM-dd
+
+management.endpoints.web.exposure.include=*
