Profile com Spring
Criação de profiles com Spring Boot

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,6 +6,6 @@ spring.datasource.password=123456
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=yyyy-MM-dd
 
-algamoney.seguranca.enable-https=false
+algamoney.seguranca.enable-https=true
 
 algamoney.origin-permitida=*
